--- a/.github/workflows/NanoPi-R2s RK3328 OpenWrt Build.yml
+++ b/.github/workflows/NanoPi-R2s RK3328 OpenWrt Build.yml
@@ -12,8 +12,8 @@ name: NanoPi-R2s RK3328 OpenWrt Build
 on:  
 #执行此脚本请删除下面3行的#，然后点击start commit
 #  push:
-#    branches: 
-#      - master
+    branches: 
+      - master
 
 # schedule:
   #   - cron: 0 20 * * *
